CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( slam )
SET( CMAKE_CXX_COMPLIER "g++")
SET( CMAKE_BUILD_TYPE Release)
SET( CMAKE_CXX_FLAGS "-std=c++11 -O3")

#set path
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )

#add sub-file, which means to go into the sub_dir to continue compile
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)
